added ffmpeg dependency to CI via tox-conda

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,6 +97,7 @@ archs = ["x86_64", "arm64"]
 [tool.tox]
 legacy_tox_ini = """
 [tox]
+requires = tox-conda
 envlist = py{39,310,311}
 isolated_build = True
 
@@ -107,6 +108,10 @@ python =
     3.11: py311
 
 [testenv]
+conda_deps =
+    ffmpeg
+conda_channels =
+    conda-forge
 extras =
     dev
 commands =
