--- a/datasquash/video_compression/Snakefile
+++ b/datasquash/video_compression/Snakefile
@@ -1,7 +1,24 @@
+VIDEO_DIR = "/Users/sofia/swc/project_DataSquash_video/datasets/drosophila-melanogaster-courtship/"
+OUTPUT_DIR = "output/"
+
+import os
+VIDEO_FILES =  [
+    f for f in os.listdir(VIDEO_DIR)
+    if f.endswith('.mp4')
+]
+
+rule all:
+    input:
+        expand(
+            "{output_dir}/log_{filename}.txt",
+            filename=VIDEO_FILES,
+            output_dir=OUTPUT_DIR
+        )
+
 rule video_encoding:
     input:
-        "/Users/sofia/swc/project_DataSquash_video/datasets/drosophila-melanogaster-courtship/20190128_113421.mp4",
+        video = "/Users/sofia/swc/project_DataSquash_video/datasets/drosophila-melanogaster-courtship/{filename}",
     output:
-        "/Users/sofia/swc/project_DataSquash_video/DataSquash/output/log.txt"
+        encoded_video = "{output_dir}/log_{filename}.txt"
     shell:
-        "ffprobe -v error -show_streams {input} > {output}"
+        "ffprobe -v error -show_streams {input.video} > {output.encoded_video}"
